--- a/Finnish/main/MiGalleryLockscreen.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiGalleryLockscreen.apk/res/values-fi-rFI/strings.xml
@@ -17,6 +17,12 @@
   <string name="abc_shareactionprovider_share_with">Jakaminen:</string>
   <string name="abc_shareactionprovider_share_with_application">Jakaminen: %s</string>
   <string name="abc_toolbar_collapse_description">Kutista</string>
+  <string name="about_download_fail">Ei voitu ladata</string>
+  <string name="about_downloading">Ladataan %s</string>
+  <string name="about_item_function">Uusia ominaisuuksia</string>
+  <string name="about_net_error">Tarkista verkkoyhteytesi ja yritä uudelleen.</string>
+  <string name="about_newest">Taustakuvan Karuselli on ajan tasalla.</string>
+  <string name="about_update">Päivitä</string>
   <string name="ad_feed_badge">MAINOS</string>
   <string name="ad_pop_btn_hidden">Piilota</string>
   <string name="ad_pop_des">Ladataan sovellusta:</string>
@@ -62,6 +68,10 @@
   <string name="choose_to_signup">Ei, luon tilin</string>
   <string name="clear_history">Tyhjennä hakuhistoria</string>
   <string name="clear_search_edittext">Tyhjennä</string>
+  <string name="comment_pop_cancel">Ei nyt</string>
+  <string name="comment_pop_content">Arvostele meidät jos tykkäät Taustakuvan Karusellista!</string>
+  <string name="comment_pop_ok">Arvostele</string>
+  <string name="comment_pop_title">Arvostele Taustakuvan Karuselli</string>
   <string name="confirm">Ota käyttöön</string>
   <string name="create_shortcut">Luo Aloitusnäytön pikakuvake</string>
   <string name="current_connection_invalid">Odota, kunnes laite yhdistää verkkoon</string>
@@ -166,6 +176,15 @@
   <string name="lks_left_net_error">Verkkoyhteyttä ei voitu muodostaa.</string>
   <string name="lks_logo_desc2">Tuoreita taustakuvia päivittäin</string>
   <string name="lks_subscription_toast">Taustakuva vaihdettiin onnistuneesti</string>
+  <string name="llks_pop_btm_des">Aloita päiväsi hymyllä</string>
+  <string name="llks_pop_btm_des_backup">Saa päivällesi hyvä aloitus</string>
+  <string name="llks_pop_btm_title">Hyvää huomenta</string>
+  <string name="llks_pop_btm_title_backup">Aamutervehdys</string>
+  <string name="llks_pop_i_know">Selvä</string>
+  <string name="llks_pop_top_des">Vastaanota tuoreita kuvia säännöllisesti</string>
+  <string name="llks_pop_top_des_backup">Toimitettuna näytöllesi päivittäin</string>
+  <string name="llks_pop_top_title">Uusia taustakuvia</string>
+  <string name="llks_pop_top_title_backup">Tuoreita kuvia</string>
   <string name="load_hdpicture_complete">Alkuperäinen kuva ladattiin onnistuneesti</string>
   <string name="loading">Odota hetki</string>
   <string name="lock_screen_date">"EEEE d. MMMM'ta'"</string>
@@ -188,6 +207,7 @@
   <string name="mode_title">Näytetään suosituksia</string>
   <string name="more_article">Lisää artikkeleita</string>
   <string name="need_open_gallery">Ota Taustakuvan Karuselli käyttöön</string>
+  <string name="new_feature_title">Mitä on uutta</string>
   <string name="nick_name">Nimi</string>
   <string name="no_long_show">Älä näytä uudelleen</string>
   <string name="no_networdk">Verkkoyhteyttä ei voitu muodostaa</string>
@@ -270,6 +290,8 @@
   <string name="search_menu_title">Haku</string>
   <string name="search_str">Suosittu nyt</string>
   <string name="select_package">Valitse versio</string>
+  <string name="setting_about_item_des">Versio</string>
+  <string name="setting_about_item_title">Tietoja Taustakuvan Karusellista</string>
   <string name="setting_des">Voit määrittää diaesityksesi asetuksissa Asetukset &gt; Lukitusnäyttö &amp; salasana &gt; Taustakuvan Karuselli</string>
   <string name="setting_head">Asetukset</string>
   <string name="setting_ok">Asetukset</string>
@@ -296,6 +318,7 @@
   <string name="sst_custom_wallpaper_desc">Valitse kuvia Galleriasta ja suosituksista</string>
   <string name="sst_custom_wallpaper_title">Mukautettu diaesitys</string>
   <string name="sst_custom_wallpaper_title2">Diaesitys</string>
+  <string name="sst_disable_unopen">Beta-ominaisuus</string>
   <string name="sst_effect_next_wallpaper">Aseta uusi taustakuva käyttääksesi muutoksia</string>
   <string name="sst_favor_desc">Näytä suosikkitaustakuvani</string>
   <string name="sst_favor_title">Suosikit</string>
@@ -307,7 +330,8 @@
   <string name="sst_logo_desc">Tuoreita taustakuvia päivittäin</string>
   <string name="sst_mode_selection">Tapa</string>
   <string name="sst_more_subscription">Lisää tilauksia</string>
-  <string name="sst_morning_greeting_desc">Saa tuore kuva joka aamu</string>
+  <string name="sst_morning_greeting_desc">Saat tuoreen kuvan joka aamu</string>
+  <string name="sst_morning_greeting_disable_toast">Tämä ominaisuus on pian käytettävissä</string>
   <string name="sst_morning_greeting_title">Vastaanota aamutervehdys</string>
   <string name="sst_new_feature">Uusia ominaisuuksia</string>
   <string name="sst_no_favor_wallpaper_hint">Suosikeissa ei ole taustakuvia</string>
@@ -345,9 +369,11 @@
   <string name="theme_apply_failured">Asettaminen epäonnistui, yritä uudelleen myöhemmin</string>
   <string name="theme_apply_success">Asetettiin onnistuneesti</string>
   <string name="theme_applying">Asetetaan…</string>
-  <string name="theme_des">Taustakuvan Karuselli tukee vain MIUI:n oletusteemaa. Aseta oletusteema käyttääksesi Taustakuvan Karusellia.</string>
-  <string name="theme_ok">Aseta oletusteema</string>
-  <string name="theme_title">Et käytä oletusteemaa</string>
+  <string name="theme_des">Aseta oletusteema ja ota Taustakuvan Karuselli uudelleen käyttöön.</string>
+  <string name="theme_des_lock_style">Aseta oletus Lukitusnäyttö ja oa Taustakuvan Karuselli uudelleen käyttöön.</string>
+  <string name="theme_ok">Asetukset</string>
+  <string name="theme_title">Vaihda oletusteemaan</string>
+  <string name="theme_title_lock_style">Vaihda oletus Lukitusnäyttöön</string>
   <string name="ticket_hint">Vahvistuskoodi</string>
   <string name="ticket_invalid">Antamasi koodi on virheellinen</string>
   <string name="ticket_sign_in">Kirjaudu sisään tekstiviestillä</string>
