--- a/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/MiuiSystemUI.apk/res/values-fi-rFI/strings.xml
@@ -327,6 +327,7 @@
      <string name="face_unlock_rotated_right">Käännä päätäsi vasemmalle</string>
      <string name="face_unlock_sc_status">Paina näyttöä alaspäin avataksesi kameran</string>
      <string name="face_unlock_stay_away_screen">Pysy 25-40 cm etäisyydellä näytöstä</string>
+     <string name="face_unlock_success">Kasvojen tiedot vahvistettiin onnistuneesti</string>
      <string name="face_unlock_success_stay_screen_msg">Pysy Lukitusnäytöllä kasvojentunnistuksen jälkeen. Pyyhkäise ylös avataksesi Aloitusnäytön.</string>
      <string name="face_unlock_success_stay_screen_title">Pysy Lukitusnäytöllä avaamisen jälkeen</string>
      <string name="fingerprint_add_text">Sormenjälkikäyttöliittymä päivitettiin. Lisää sormenjälkesi uudelleen.</string>
@@ -1100,6 +1101,8 @@ Kaikki käyttäjät voivat päivittää kaikkien käyttäjien sovelluksia."</str
   <string name="always_use_accessory">Käytä oletuksena tälle USB-lisälaitteelle</string>
   <string name="always_use_device">Käytä oletuksena tälle USB-laitteelle</string>
   <string name="animator_duration_scale_title">Animaattori</string>
+  <string name="aod_lock_screen_date">"EEEE d. MMMM'ta'"</string>
+  <string name="aod_lock_screen_date_12">"EEEE d. MMMM'ta'"</string>
   <string name="apn_settings_not_available">Tämä käyttäjä ei voi käyttää APN-asetuksia</string>
   <string name="app_label">Järjestelmän käyttöliittymä</string>
   <string name="app_process_limit_title">Taustaprosessi</string>
