--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -505,6 +505,8 @@ Aseta vain laitteet vierekkäin (yleensä takakannet vastakkain) ja kosketa näy
   <string name="auto_disable_screenbuttons_rotation_title">Estä navigointipainikkeet vaakatasossa</string>
   <string name="auto_disable_screenbuttons_summary">Poista navigointipainikkeet käytöstä automaattisesti, kun käytät valitsemiasi sovelluksia. Ota painikkeet takaisin käyttöön tuplanapauttamalla mitä tahansa niistä.</string>
   <string name="auto_disable_screenbuttons_title">Poista navigointipainikkeet käytöstä automaattisesti</string>
+  <string name="auto_dual_clock_summary">Näytä Kaksoiskello, kun nykyinen aika eroaa toisesta kellosta</string>
+  <string name="auto_dual_clock_title">Kaksoiskello</string>
   <string name="auto_launch_disable_text">Oletuksia ei asetettu.</string>
   <string name="auto_launch_enable_text">Olet valinnut tämän sovelluksen käynnistettäväksi oletuksena tiettyjen toimintojen yhteydessä.</string>
   <string name="auto_launch_label">Avaa oletuksena</string>
@@ -1365,7 +1367,6 @@ Voit jatkaa puhelimesi käyttöä, kun palautat tehdasasetukset. Kun olet määr
   <string name="cutout_mode_default">Automaattinen</string>
   <string name="cutout_mode_settings_title">Jotkut sovellukset saattavat esiintyä väärin, jos mukautat näyttöloven esiintymismuotoa.</string>
   <string name="cutout_mode_title">Yksittäisten sovellusten näyttölovi</string>
-  <string name="custom_wifi_name_title">Muokkaa Wi-Fi:n nimeä</string>
   <string name="cutout_type_desc">Ota käyttöön pehmeentääksesi näyttöloven reunoja</string>
   <string name="cutout_type_title">Säädä näyttöloven muoto</string>
   <string name="daltonizer_mode_deuteranomaly">Deuteranomalia (puna-vihersokeus)</string>
@@ -1782,6 +1783,11 @@ Asetus vaikuttaa tämän puhelimen kaikkiin käyttäjiin."</string>
   <string name="doze_title">Ambient-näyttö</string>
   <string name="draw_overlay">Sovellusten päällä näkyminen</string>
   <string name="dtmf_tone_enable_title">Valintanäppäimien näppäinäänet</string>
+  <string name="dual_clock">Kaksoiskello</string>
+  <string name="dual_clock_aod_hint">"\Kaksoiskello\" on riippuvainen seuraavista ominaisuuksista: 1. Sammutetulle näytölle, salli kohteiden näyttäminen asetuksissa Asetukset &gt; Näyttö; 2. Lukitusnäytölle, varmista, että käytät oletus- tai klassista teemaa asetuksissa Asetukset &gt; Teemat; 3. Aloitusnäytölle, varmista että käytät järjestelmän oletuskellowidgettiä.</string>
+  <string name="dual_clock_hint">\"Kaksoiskello\" on riippuvainen seuraavista ominaisuuksista: 1. Lukitusnäytölle, varmista, että käytät oletus- tai klassista teemaa asetuksissa Asetukset &gt; Teemat; 2. Aloitusnäytölle, varmista että käytät järjestelmän oletuskellowidgettiä.</string>
+  <string name="dual_clock_ok">Selvä</string>
+  <string name="dual_clock_open_message">Kaksoiskello näytetään Lukitusnäytöllä, Aloitusnäytöllä ja sammutetulla näytöllä.</string>
   <string name="dual_setting_simcard1">SIM-kortti 1</string>
   <string name="dual_setting_simcard2">SIM-kortti 2</string>
   <string name="dump_log">Hae ongelmaan liittyvät lokit</string>
@@ -3001,6 +3007,7 @@ Tällä laitteella on muita paikalla olevia käyttäjiä.
   <string name="modify_instruction_password_settings">Aseta salasana</string>
   <string name="modify_privacy_password">Vaihda salasana</string>
   <string name="more_dangerous_option_hint">Korkean riskin toimintoja, mm. \"%1$s\" on käytössä. Napauta vaihtaaksesi asetuksia.</string>
+  <string name="more_installed_services_title">Lisää ladattuja palveluita</string>
   <string name="move_app">Siirrä</string>
   <string name="move_app_failed_dlg_text">Sovelluksen siirto epäonnistui.%1$s</string>
   <string name="move_app_to_internal">Siirrä puhelimeen</string>
@@ -3376,6 +3383,14 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="operator_warning">Operaattorin mittaustulos saattaa erota laitteesi mittaamasta.</string>
   <string name="optimization_cancel">Peruuta</string>
   <string name="ota_disable_automatic_update">Automaattiset järjestelmäpäivitykset</string>
+  <string name="ota_disable_automatic_update_summary">Ota päivitykset käyttöön, kun laite käynnistyy uudelleen</string>
+  <string name="otg_button">OTG</string>
+  <string name="otg_closed">Poissa käytöstä</string>
+  <string name="otg_opened">Käytössä</string>
+  <string name="otg_settings">OTG</string>
+  <string name="otg_tip">"USB On-The-Go sallii USB-asemien ja näppäimistöjen yhdistämisen mobiililaitteeseesi.
+
+OTG poistetaan käytöstä automaattisesti, kun sitä ei käytetä 10 minuuttiin."</string>
   <string name="other_advanced_settings">Lisäasetukset</string>
   <string name="other_device_info">Muut</string>
   <string name="other_personal_settings">Henkilökohtaiset asetukset</string>
@@ -3899,6 +3914,7 @@ Bluetooth."</string>
   <string name="reset_shortcut_manager_throttling">Nollaa ShortcutManagerin kutsurajoitus</string>
   <string name="reset_shortcut_manager_throttling_complete">ShortcutManagerin kutsurajoitus nollattiin.</string>
   <string name="resetting_second_space_passwd">Nollataan Toisen tilan salasanaa</string>
+  <string name="resident_timezone_summary">Toinen kello</string>
   <string name="resolver_settings_label">Lajittele</string>
   <string name="restore_default_apn">Palautetaan APN-oletusasetuksia</string>
   <string name="restore_default_apn_completed">APN-oletusasetukset on palautettu.</string>
@@ -5106,6 +5122,7 @@ Se on Googlen tapa synkronoida tietoja, ja sen avulla voit käyttää yhteystiet
   <string name="to_close">Poista käytöstä</string>
   <string name="toast_lockscreen_glogin_empty_password">Syötä salasana</string>
   <string name="toast_need_login">Kirjaudu sisään Mi Tilillesi</string>
+  <string name="toast_sta_ap_works_wifi_display_disable">Ei voi suoratoistaa, kun Wi-Fi-yhteys on muodostettu ja hotspot on käytössä.</string>
   <string name="total">Älä häiritse</string>
   <string name="total_info">Mykistä äänet ja poista värinä käytöstä paitsi hälytyksiltä</string>
   <string name="total_info_no_vibrator">Mykistä äänet paitsi hälytyksiltä</string>
